# avito-prices-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
.envs/example/: .mongodb  .mongoexpress  .parser
.secrets/example/: .mongo-password  .mongo-root-password  .mongodb-root-username  .mongodb-username  .mongoexpress-password  .mongoexpress-username
docker/: _check-mongo  _init-mongo  compose.yml  full.compose.yml  minimal.compose.yml  mongodb.Dockerfile  mongoexpress.Dockerfile  parser.Dockerfile
docker/configs/: check-mongo  init-mongo
docker/dockerfiles/: mongodb.Dockerfile  mongoexpress.Dockerfile  parser.Dockerfile
request-entries/: example.json  example.yaml
src/: main.py
src/app/: cli.py  consts.py  db.py  file_loader.py  filters.py  models.py  parser.py  presenter.py  scraper.py  services.py  sorters.py  utils.py
src/app/cli/: commands.py  defaults.py  opts.py  parsers.py
src/app/db/: config.py  crud.py  serializers.py
src/app/scraper/: driver.py  getters.py
